--- a/project/spring/backend-usersapp/src/main/resources/application.properties
+++ b/project/spring/backend-usersapp/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password =
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine = innodb
 
-#####▼▼ CURSO
+#####▼▼ 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database.platform=org.hibernate.dealect.MySQLDialect
 spring.jpa.show-sql=true
@@ -19,8 +19,7 @@ spring.jpa.hibernate.ddl-auto = update
 #spring.security.user.name=admin
 #spring.security.user.password=1234
 
-
 # App Properties
-spear.app.jwtSecret= ======================spear=Spring===========================
-spear.app.jwtExpirationMs=86400000
+#spear.app.jwtSecret= ======================spear=Spring===========================
+#spear.app.jwtExpirationMs=86400000
 
